--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,17 @@ body{
     font-weight: 700;
     padding: 15px 35px;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
 
 /* header related styles */
 .header{
@@ -84,3 +95,12 @@ nav li a{
     width: 500px;
 }
 
+/* main section styles */
+
+/* about section styles */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
