about info added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,6 +96,11 @@ nav li a{
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 
 /* about section styles */
 .about{
@@ -103,4 +108,11 @@ nav li a{
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
