--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -100,7 +100,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
-
+main section{
+    margin-top: 130px;  
+}
 
 /* about section styles */
 .about{
@@ -121,4 +123,54 @@ main{
 
 #what-i-do-description{
     padding: 50px 130px;
+}
+
+/* skill container styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
+}
+
+/* resume column styles */
+#resume-section-title{
+    margin-bottom: 80px;
+}
+.column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.resume-item-institute, .resume-item-description{
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.download-cv{
+    margin-top: 50px;
+    text-align: center;
 }
