--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -174,3 +174,11 @@ main section{
     margin-top: 50px;
     text-align: center;
 }
+
+/* footer styles */
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
