--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -179,6 +179,26 @@ main section{
 footer{
     display: flex;
     background-color: #FFF8F3;
+    gap: 100px;
     margin-top: 100px;
     padding: 130px 200px;
+}
+.footer-column-title{
+    margin-bottom: 20px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-links a{
+    margin-right: 20px;
+}
+.contact input[type="text"], .contact input[type="email"], .contact textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
 }
