font icons added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,9 +33,9 @@ body{
 /* header related styles */
 .header{
     background-color: #FFF8F3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, left top;
     padding-top: 50px;
 }
 
