--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,8 +97,9 @@ nav li a{
 
 /* main section styles */
 main{
-    max-width: 1140px;
+    max-width: 960px;
     margin: 0 auto;
+    border: 1px solid blue;
 }
 main section{
     margin-top: 130px;  
@@ -201,4 +202,18 @@ footer{
     background: #FFF;
     border: 0;
     width: 100%;
+}
+/* responsive style */
+/* mobile device */
+.hide{
+    display: none;
+}
+@media screen and (max-width: 576px) {
+    .skills-container{
+        flex-direction: column;
+    }
+    #what-i-do-description{
+        padding: 20px;
+    }
+    
 }
