resume section make responsive

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -209,7 +209,7 @@ footer{
     display: none;
 }
 @media screen and (max-width: 576px) {
-    .skills-container{
+    .skills-container, .resume-container{
         flex-direction: column;
     }
     #what-i-do-description{
