make footer section responsive

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -209,11 +209,16 @@ footer{
     display: none;
 }
 @media screen and (max-width: 576px) {
-    .skills-container, .resume-container{
+    .skills-container, .resume-container, footer{
         flex-direction: column;
     }
-    #what-i-do-description{
+    #what-i-do-description, footer{
         padding: 20px;
     }
-    
+    .footer-column{
+        width: 100%;
+    }
+    .contact input[type="text"], .contact input[type="email"], .contact textarea{
+        width: 85%;
+    }
 }
