--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,7 +99,6 @@ nav li a{
 main{
     max-width: 960px;
     margin: 0 auto;
-    border: 1px solid blue;
 }
 main section{
     margin-top: 130px;  
@@ -190,6 +189,11 @@ footer{
 .footer-column{
     width: 50%;
 }
+.social-links{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
 .social-links a{
     margin-right: 20px;
 }
@@ -209,10 +213,37 @@ footer{
     display: none;
 }
 @media screen and (max-width: 576px) {
-    .skills-container, .resume-container, footer{
+    .header{
+        background-image: none;
+    }
+    nav{
+        margin: 20px;
+    }
+    .banner{
+        flex-direction: column-reverse;
+        margin: 10px;
+    }
+    .banner .profile-pic{
+        width: 100%;
+    }
+    nav > ul{
+        gap: 10px;
+        margin-top: 50px;
+    }
+    nav li{
+        margin-right: 0;
+    }
+    nav, nav > ul, .skills-container, .resume-container, footer, .about-info-container{
         flex-direction: column;
     }
-    #what-i-do-description, footer{
+    .resume-container{
+        padding: 10px;
+    }
+    .common-btn{
+        padding: 15px;
+        font-size: 1em;
+    }
+    #what-i-do-description, footer, .about{
         padding: 20px;
     }
     .footer-column{
@@ -220,5 +251,9 @@ footer{
     }
     .contact input[type="text"], .contact input[type="email"], .contact textarea{
         width: 85%;
+    }
+    .about-info-container{
+        gap: 20px;
+        margin-top: 30px;
     }
 }
